# rinha-backend-2026-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  haproxy.cfg  results.json
src/: http_server.cpp  http_server.h  index_loader.cpp  index_loader.h  main.cpp  metadata.cpp  metadata.h  vectorizer.cpp  vectorizer.h
tools/: build_index.cpp  build_index.sh  build_index_from_bin.cpp
